infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insightfuel-query-api-service
  namespace: insightfuel
  labels:
    app: query-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3004
      protocol: TCP
      name: http
  selector:
    app: query-api
